fix grainy thumbnail 🌾 (#14)
* revert to og square portugal img vs `og:image` cropped & resized one 🌾

* manually cropped (first) and then resized image to 1200x630px in Preview

* modified top level domain meta type to article so that thumbnail is shown as 1200x630

* re-ordered metatags to match almost 1:1 the ordering shown in https://developers.facebook.com/docs/sharing/webmasters#markup

* fixed relative path to resized image

* resample efforts take 1

* commenting out img size defining metatags and reverting to og square image

* removing image completely for the headache it is 👹

* fixed relative paths & reintroduced og:image

* updated antiquated path to `og:image` tailoured thumbnail img

* revised index bio

* designated thumbnail `og:image` to OG index photo and removed incorrectly resized portugal img

* updated index bio to include stackoverflow profile & encourage for email subscriptions

* ... and with that update respective design

* toned down pink underscore for `stackoverflow` hyperlink

* corrected incorrect file extension for OG portugal image

* updated margin to better align all lines widths of index page

* lgtm for widths 370 to ~400px!

* made ui of code index page more smooth wrt max-width and project descriptions

* fixed width once again after mobile qa

* made `career` tag more palatable to the visually keen

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,8 @@
 :root {
   --font: -apple-system, blinkmacsystemfont, system-ui, sans-serif;
   --main-content: 32rem;
-  --main-content-biography: 17rem;
+  --main-content-biography: 16rem;
+  --code-content-index: 19rem;
   --white: rgba(243, 241, 240, 0.99);
   --white-grey: rgba(243, 241, 240, 0.91);
   --black: #111;
@@ -11,12 +12,13 @@
   --midground: var(--black-grey);
   --background: var(--white);
   --linkedin: #0072b1;
-  --strava: #ff6f21;
+  --strava: #cb6314;
   --soundcloud: #a853a1;
   --thoughts: #cdd327;
   --github: #5862b1;
+  --stackoverflow: #a05786;
   --personal: #373e72;
-  --work: #4e2626;
+  --work: #452f2f;
   --email: #8154a2;
   --dev: rgb(72, 167, 0);
   --transition:
@@ -163,6 +165,11 @@ blockquote {
   text-decoration-color: var(--github);
 }
 
+.stackoverflow,
+.stackoverflow::selection {
+  text-decoration-color: var(--stackoverflow);
+}
+
 .email,
 .email::selection {
   text-decoration-color: var(--email);
@@ -191,10 +198,6 @@ blockquote {
 .return-to-main {
   display: flex;
   justify-content: center;
-}
-
-#code-page-description {
-  font-size: 1.15rem;
 }
 
 .thoughtsPostTitleAndTag {
@@ -248,6 +251,7 @@ blockquote {
 
   #code-page-description {
     font-size: 1rem;
+    max-width: var(--code-content-index);
   }
 
   #biography {
